# viet-wiktionary-scrape

./: .gitignore  README.md  pyproject.toml  sandbox.ipynb
data/: South_Levantine_Arabic_terms_with_usage_examples.csv
