[tool.poetry]
name = "viet-wiktionary-scrape"
version = "0.1.0"
description = ""
authors = ["Kevin Sun <kevsun1@gmail.com>"]
readme = "README.md"
packages = [{include = "viet_wiktionary_scrape"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
