[tool.poetry]
name = "wiktionary-scrape"
version = "0.1.0"
description = ""
authors = ["Kevin Sun <kevsun1@gmail.com>"]
readme = "README.md"
packages = [{include = "wiktionary_scrape"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
